--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^1.7.0",
+    "swagger-ui-express": "^4.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.3"
   },
