--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^1.7.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.0",
     "ts-node": "^8.3.0",
+    "typeorm": "^0.2.18",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
