user data validation

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -15,5 +15,11 @@
   ],
   "subscribers": [
     "subscriber/*.ts"
-  ]
+  ],
+  "cli" : {
+    "entitiesDir": "models",
+    "migrationsDir": "migration",
+    "subscribersDir": "subscriber"
+  }
+
 }
