--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^14.5.0",
     "@types/cors": "^2.8.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi-password-complexity": "^3.1.0",
     "mysql2": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.0",
     "ts-node": "^8.3.0",
     "typeorm": "^0.2.18",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/joi-password-complexity": "^3.1.0",
     "@types/mysql": "^2.15.7",
     "@types/node": "^12.7.5",
+    "@types/validator": "^10.11.3",
     "nodemon": "^1.19.2"
   }
 }
