--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "swagger-ui-express": "^4.1.0",
     "ts-node": "^8.3.0",
     "typeorm": "^0.2.18",
-    "typescript": "^3.6.3",
-    "validator": "^11.1.0"
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
