--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/joi": "^14.5.0",
     "@types/cors": "^2.8.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.1",
     "@types/joi-password-complexity": "^3.1.0",
     "@types/mysql": "^2.15.7",
