--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
   "username": "root",
   "password": "1234",
   "database": "nodepract",
-  "synchronize": false,
+  "synchronize": true,
   "logging": false,
   "entities": [
     "models/*.ts"
