--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi-password-complexity": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.0",
@@ -29,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.1",
     "@types/joi-password-complexity": "^3.1.0",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mysql": "^2.15.7",
     "@types/node": "^12.7.5",
     "@types/validator": "^10.11.3",
